--- a/package.json
+++ b/package.json
@@ -32,12 +32,19 @@
   },
   "dependencies": {
     "@apollo/server": "^5.3.0",
+    "@as-integrations/express5": "^1.1.2",
+    "@graphql-tools/load-files": "^7.0.1",
+    "@graphql-tools/merge": "^9.1.7",
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.6",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "express-rate-limit": "^8.2.1",
     "graphql": "^16.12.0",
     "graphql-scalars": "^1.25.0",
     "graphql-type-json": "^0.3.2",
+    "http": "^0.0.1-security",
+    "jsonwebtoken": "^9.0.3",
     "mysql2": "^3.16.2",
     "neverthrow": "^8.2.0",
     "winston": "^3.19.0"
